update file routes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
     <section class="thankyou-box card hidden">
       <figure class="illustration">
-        <img src="/assets/images/svg/illustration-thank-you.svg" alt="illustration">
+        <img src="./assets/images/svg/illustration-thank-you.svg" alt="illustration">
       </figure>
       <p class="rating">You selected <span></span> out of 5</p>
       <span class="title">Thank you!</span>
