--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <div class="attribution">
     <div class="left">
-      Coded by <a href="#">@CamiloBeltran24</a>
+      Coded by <a href="https://www.linkedin.com/in/camilobeltran24/">@CamiloBeltran24</a>
     </div> 
     <div class="right">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
